--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,13 +6,21 @@
 @import "vals";
 @import "base";
 
+#slider_wrap{
+	width: 100%;
+	height:100px;
+	position:relative;
+	display:block;
+	background:#f00;
+}
+
 /*wrapper ======================*/
 .wrapper_box{
 	background: $wht;
 	position: relative;
 	z-index: 3;
 	.wrapper{
-		
+
 	}
 }
 
